# attribute

./: .gitignore  LICENSE  WORKSPACE  go.mod  go.sum  readme.adoc
neo/: BUILD.bazel  neo.go  transaction.go  transaction_test.go
scan/: BUILD.bazel  main.go  repository.go  scan.go  scan_test.go
scan/tag/: BUILD.bazel  tag.go  tag_test.go
