load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "neo.go",
        "transaction.go"
    ],
    deps = [
    	"@in_gopkg_src_d_go_git_v4//:go_default_library",
    	"@in_gopkg_src_d_go_git_v4//plumbing/object:go_default_library",
    ],
    importpath = "github.com/grahambrooks/attribute/neo",
    visibility = ["//visibility:public"],
)
