load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test",)
load("@bazel_gazelle//:def.bzl", "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "neo.go",
        "transaction.go"
    ],
    deps = [
        "//scan/tag:go_default_library",
    	"@in_gopkg_src_d_go_git_v4//:go_default_library",
    	"@in_gopkg_src_d_go_git_v4//plumbing/object:go_default_library",
    ],
    importpath = "github.com/grahambrooks/attribute/neo",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["transaction_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"]
)