load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
    ],
    deps = [
        "//neo:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    	"@in_gopkg_src_d_go_git_v4//:go_default_library",
    	"@in_gopkg_src_d_go_git_v4//plumbing/object:go_default_library",
    ],
    importpath = "github.com/grahambrooks/attribute",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "attribute",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
