load("@io_bazel_rules_go//go:def.bzl", "go_test", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "tag.go",
    ],
    deps = [
    ],
    importpath = "github.com/grahambrooks/attribute/scan/tag",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["tag_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"]
)